--- a/css/styles.css
+++ b/css/styles.css
@@ -321,11 +321,11 @@ a {
 }
 
 .skills .skillsGrid div:nth-of-type(4):hover {
-  border-color: #818181;
+  border-color: #41B883;
 }
 
 .skills .skillsGrid div:nth-of-type(4):hover>i {
-  color: #818181;
+  color: #41B883;
 }
 
 .skills .skillsGrid div:nth-of-type(5) {
